// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transfer should render correctly 1`] = `
<div
  class="jc-transfer"
>
  <div
    class="jc-transfer-list"
  >
    <div
      class="jc-transfer-list-header"
    >
      <label
        class="jc-checkbox-wrapper"
      >
        <span
          class="jc-checkbox jc-checkbox-checked"
        >
          <input
            checked=""
            class="jc-checkbox-input"
            type="checkbox"
          />
          <span
            class="jc-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="jc-transfer-list-header-selected"
      >
        <span>
          1/2 items
        </span>
        <span
          class="jc-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="jc-transfer-list-body"
    >
      <ul
        class="jc-transfer-list-content"
      >
        <li
          class="jc-transfer-list-content-item"
        >
          <label
            class="jc-checkbox-wrapper"
          >
            <span
              class="jc-checkbox jc-checkbox-checked"
            >
              <input
                checked=""
                class="jc-checkbox-input"
                type="checkbox"
              />
              <span
                class="jc-checkbox-inner"
              />
            </span>
          </label>
          <span />
        </li>
        <li
          class="jc-transfer-list-content-item jc-transfer-list-content-item-disabled"
        >
          <label
            class="jc-checkbox-wrapper"
          >
            <span
              class="jc-checkbox jc-checkbox-disabled"
            >
              <input
                class="jc-checkbox-input"
                disabled=""
                type="checkbox"
              />
              <span
                class="jc-checkbox-inner"
              />
            </span>
          </label>
          <span />
        </li>
      </ul>
      <div
        class="jc-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
  <div
    class="jc-transfer-operation"
  >
    <button
      class="jc-btn jc-btn-primary jc-btn-sm jc-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="jcicon jcicon-left "
      />
    </button>
    <button
      class="jc-btn jc-btn-primary jc-btn-sm jc-btn-icon-only"
      type="button"
    >
      <i
        class="jcicon jcicon-right "
      />
    </button>
  </div>
  <div
    class="jc-transfer-list"
  >
    <div
      class="jc-transfer-list-header"
    >
      <label
        class="jc-checkbox-wrapper"
      >
        <span
          class="jc-checkbox"
        >
          <input
            class="jc-checkbox-input"
            type="checkbox"
          />
          <span
            class="jc-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="jc-transfer-list-header-selected"
      >
        <span>
          1 item
        </span>
        <span
          class="jc-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="jc-transfer-list-body"
    >
      <ul
        class="jc-transfer-list-content"
      >
        <li
          class="jc-transfer-list-content-item"
        >
          <label
            class="jc-checkbox-wrapper"
          >
            <span
              class="jc-checkbox"
            >
              <input
                class="jc-checkbox-input"
                type="checkbox"
              />
              <span
                class="jc-checkbox-inner"
              />
            </span>
          </label>
          <span />
        </li>
      </ul>
      <div
        class="jc-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
</div>
`;

exports[`Transfer should show sorted targetkey 1`] = `
<div
  class="jc-transfer"
>
  <div
    class="jc-transfer-list"
  >
    <div
      class="jc-transfer-list-header"
    >
      <label
        class="jc-checkbox-wrapper"
      >
        <span
          class="jc-checkbox"
        >
          <input
            class="jc-checkbox-input"
            type="checkbox"
          />
          <span
            class="jc-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="jc-transfer-list-header-selected"
      >
        <span>
          1 item
        </span>
        <span
          class="jc-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="jc-transfer-list-body"
    >
      <ul
        class="jc-transfer-list-content"
      >
        <li
          class="jc-transfer-list-content-item"
          title="a"
        >
          <label
            class="jc-checkbox-wrapper"
          >
            <span
              class="jc-checkbox"
            >
              <input
                class="jc-checkbox-input"
                type="checkbox"
              />
              <span
                class="jc-checkbox-inner"
              />
            </span>
          </label>
          <span>
            a
          </span>
        </li>
      </ul>
      <div
        class="jc-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
  <div
    class="jc-transfer-operation"
  >
    <button
      class="jc-btn jc-btn-primary jc-btn-sm jc-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="jcicon jcicon-left "
      />
    </button>
    <button
      class="jc-btn jc-btn-primary jc-btn-sm jc-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="jcicon jcicon-right "
      />
    </button>
  </div>
  <div
    class="jc-transfer-list"
  >
    <div
      class="jc-transfer-list-header"
    >
      <label
        class="jc-checkbox-wrapper"
      >
        <span
          class="jc-checkbox"
        >
          <input
            class="jc-checkbox-input"
            type="checkbox"
          />
          <span
            class="jc-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="jc-transfer-list-header-selected"
      >
        <span>
          2 items
        </span>
        <span
          class="jc-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="jc-transfer-list-body"
    >
      <ul
        class="jc-transfer-list-content"
      >
        <li
          class="jc-transfer-list-content-item"
          title="c"
        >
          <label
            class="jc-checkbox-wrapper"
          >
            <span
              class="jc-checkbox"
            >
              <input
                class="jc-checkbox-input"
                type="checkbox"
              />
              <span
                class="jc-checkbox-inner"
              />
            </span>
          </label>
          <span>
            c
          </span>
        </li>
        <li
          class="jc-transfer-list-content-item"
          title="b"
        >
          <label
            class="jc-checkbox-wrapper"
          >
            <span
              class="jc-checkbox"
            >
              <input
                class="jc-checkbox-input"
                type="checkbox"
              />
              <span
                class="jc-checkbox-inner"
              />
            </span>
          </label>
          <span>
            b
          </span>
        </li>
      </ul>
      <div
        class="jc-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
</div>
`;
